# smart-note

./: .gitignore  Cargo.toml  LICENSE  README.md  index.html  package-lock.json  package.json  tailwind.config.js
output/styles/: styles.css
src/: lib.rs  main.rs
src/components/: content.rs  header.rs  icon.rs  layout.rs  list.rs  mod.rs  search.rs  sidebar.rs
src/styles/: styles.css
