[package]
name = "smartnote"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
yew = { version = "0.20.0", features = ["csr"] }
web-sys = { version = "0.3.63", features = [
    "ScrollIntoViewOptions",
    "ScrollBehavior",
] }
wasm-bindgen = "0.2.86"
gloo = "0.10.0"
gloo-utils = { version = "0.2.0", features = ["serde"] }
serde = "1.0.163"
